--- a/TravelAlbum.Web/App_GlobalResources/GlobalResources.en.resx
+++ b/TravelAlbum.Web/App_GlobalResources/GlobalResources.en.resx
@@ -117,7 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BgDescriptionLabel" xml:space="preserve">
+    <value>Description (bg)</value>
+  </data>
+  <data name="BgTitleLabel" xml:space="preserve">
+    <value>Title (bg)</value>
+  </data>
+  <data name="EnDescriptionLabel" xml:space="preserve">
+    <value>Description (en)</value>
+  </data>
+  <data name="EnTitleLabel" xml:space="preserve">
+    <value>Title (en)</value>
+  </data>
   <data name="LabelAddTravel" xml:space="preserve">
     <value>Add travel</value>
+  </data>
+  <data name="UploadedImage_1" xml:space="preserve">
+    <value>Image 1</value>
+  </data>
+  <data name="UploadedImage_2" xml:space="preserve">
+    <value>Image 2</value>
+  </data>
+  <data name="UploadedImage_3" xml:space="preserve">
+    <value>Image 3</value>
+  </data>
+  <data name="UploadedImage_4" xml:space="preserve">
+    <value>Image 4</value>
   </data>
 </root>
