Translation to labels added, mountains checkbox list for images added, search-images template styles amended

--- a/TravelAlbum.Web/App_GlobalResources/GlobalResources.en.resx
+++ b/TravelAlbum.Web/App_GlobalResources/GlobalResources.en.resx
@@ -147,6 +147,9 @@
   <data name="LabelTravels" xml:space="preserve">
     <value>Travels</value>
   </data>
+  <data name="MountainSearchLabel" xml:space="preserve">
+    <value>Mountains</value>
+  </data>
   <data name="UploadedImage_1" xml:space="preserve">
     <value>Image 1</value>
   </data>
