--- a/TravelAlbum.Resources/App_GlobalResources/GlobalResources.en.resx
+++ b/TravelAlbum.Resources/App_GlobalResources/GlobalResources.en.resx
@@ -129,7 +129,7 @@
   <data name="EnTitleLabel" xml:space="preserve">
     <value>Title (en)</value>
   </data>
-  <data name="LabelAddSingleImage" xml:space="preserve">
+  <data name="LabelAddImage" xml:space="preserve">
     <value>Add photo</value>
   </data>
   <data name="LabelAddTravel" xml:space="preserve">
