Bootstrap styles added for checkboxes, translations added to resource dictionaries, paging amended

--- a/TravelAlbum.Resources/App_GlobalResources/GlobalResources.en.resx
+++ b/TravelAlbum.Resources/App_GlobalResources/GlobalResources.en.resx
@@ -156,6 +156,9 @@
   <data name="SelectSortingLabel" xml:space="preserve">
     <value>Select sorting</value>
   </data>
+  <data name="ShowPhotosLabel" xml:space="preserve">
+    <value>Show</value>
+  </data>
   <data name="SortingAscendingEnum" xml:space="preserve">
     <value>Ascending</value>
   </data>
