--- a/TravelAlbum.Resources/App_GlobalResources/GlobalResources.resx
+++ b/TravelAlbum.Resources/App_GlobalResources/GlobalResources.resx
@@ -156,6 +156,9 @@
   <data name="SelectSortingLabel" xml:space="preserve">
     <value>Избери сортиране</value>
   </data>
+  <data name="ShowPhotosLabel" xml:space="preserve">
+    <value>Покажи</value>
+  </data>
   <data name="SortingAscendingLabel" xml:space="preserve">
     <value>Първо най-старите</value>
   </data>
