--- a/TravelAlbum.Resources/App_GlobalResources/GlobalResources.en.resx
+++ b/TravelAlbum.Resources/App_GlobalResources/GlobalResources.en.resx
@@ -126,11 +126,26 @@
   <data name="CreateImageButtonLabel" xml:space="preserve">
     <value>Create</value>
   </data>
+  <data name="CreateTravelButtonLabel" xml:space="preserve">
+    <value>Create</value>
+  </data>
   <data name="EnDescriptionLabel" xml:space="preserve">
     <value>Description (en)</value>
   </data>
   <data name="EnTitleLabel" xml:space="preserve">
     <value>Title (en)</value>
+  </data>
+  <data name="Image1CreatedOnLabel" xml:space="preserve">
+    <value>Image 1 Created on</value>
+  </data>
+  <data name="Image2CreatedOnLabel" xml:space="preserve">
+    <value>Image 2 Created on</value>
+  </data>
+  <data name="Image3CreatedOnLabel" xml:space="preserve">
+    <value>Image 3 Created on</value>
+  </data>
+  <data name="Image4CreatedOnLabel" xml:space="preserve">
+    <value>Image 4 Created on</value>
   </data>
   <data name="ImageCreatedOnLabel" xml:space="preserve">
     <value>Created On</value>
@@ -180,19 +195,34 @@
   <data name="SortingDescendingLabel" xml:space="preserve">
     <value>Newest first</value>
   </data>
+  <data name="TravelEndDateLabel" xml:space="preserve">
+    <value>End date</value>
+  </data>
+  <data name="TravelStartDateLabel" xml:space="preserve">
+    <value>Start date</value>
+  </data>
   <data name="UploadedImage1Label" xml:space="preserve">
     <value>Image 1</value>
   </data>
   <data name="UploadedImage1PreviewLabel" xml:space="preserve">
     <value>Image 1 Peview</value>
   </data>
-  <data name="UploadedImage_2" xml:space="preserve">
+  <data name="UploadedImage2Label" xml:space="preserve">
     <value>Image 2</value>
   </data>
-  <data name="UploadedImage_3" xml:space="preserve">
+  <data name="UploadedImage2PreviewLabel" xml:space="preserve">
+    <value>Image 2 Peview</value>
+  </data>
+  <data name="UploadedImage3Label" xml:space="preserve">
     <value>Image 3</value>
   </data>
-  <data name="UploadedImage_4" xml:space="preserve">
+  <data name="UploadedImage3PreviewLabel" xml:space="preserve">
+    <value>Image 3 Peview</value>
+  </data>
+  <data name="UploadedImage4Label" xml:space="preserve">
     <value>Image 4</value>
+  </data>
+  <data name="UploadedImage4PreviewLabel" xml:space="preserve">
+    <value>Image 4 Peview</value>
   </data>
 </root>
